--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">🐂🍺Plus</string>
+    <string name="title_activity_compose_demo">Compose Demo</string>
 </resources>
