--- a/noxus/src/main/res/values/strings.xml
+++ b/noxus/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">noxus</string>
+    <string name="anonymous">访客</string>
+    <string name="user_info">用户信息</string>
+    <string name="edit">编辑</string>
 </resources>
